@@ -30,7 +30,7 @@
 #include "modules/tools.h"
 
 #define DEF_MODULE(name, reqs) \
-  { #name, init_module_##name, exit_module_##name, (reqs), FALSE }
+  { #name, init_module_##name, exit_module_##name, (reqs), false }
 
 typedef struct Module
 {
@@ -38,7 +38,7 @@ typedef struct Module
   int (*init)();
   void (*exit)();
   int reqs;
-  int installed;
+  bool installed;
 } Module;
 
 static Module module[] =
@@ -46,9 +46,9 @@ static Module module[] =
   /* This sorting is very important because last modules depend of
      first ones.  */
 
-  DEF_MODULE(palette,		REQUIRE_INTERFACE),
-  DEF_MODULE(effect,		REQUIRE_INTERFACE),
-  DEF_MODULE(tools,		REQUIRE_INTERFACE),
+  DEF_MODULE(palette,		0),
+  DEF_MODULE(effect,		0),
+  DEF_MODULE(tools,		0),
   DEF_MODULE(graphics,		REQUIRE_INTERFACE),
   DEF_MODULE(gui,		REQUIRE_INTERFACE),
   DEF_MODULE(recent,		REQUIRE_INTERFACE),
@@ -61,13 +61,13 @@ static int modules = sizeof(module) / sizeof(Module);
 void modules_init(int requirements)
 {
   for (int c=0; c<modules; c++)
-    if (module[c].reqs & requirements) {
+    if ((module[c].reqs & requirements) == module[c].reqs) {
       PRINTF("Installing module: %s\n", module[c].name);
 
       if ((*module[c].init)() < 0)
 	throw ase_exception(std::string("Error initializing module: ") + module[c].name);
 
-      module[c].installed = TRUE;
+      module[c].installed = true;
     }
 }
 
@@ -77,6 +77,6 @@ void modules_exit()
     if (module[c].installed) {
       PRINTF("Unstalling module: %s\n", module[c].name);
       (*module[c].exit)();
-      module[c].installed = FALSE;
+      module[c].installed = false;
     }
 }
